--- a/ansible/site.yml
+++ b/ansible/site.yml
@@ -2,12 +2,17 @@
 - hosts: all
   roles:
   - { role: roles/common }
-  - { role: roles/docker }
+  - { role: roles/contrib/docker }
 
 
 - hosts: consul
   roles:
     - { role: roles/consul }
-    - { role: roles/nomad }
   tags:
     - consul
+
+- hosts: nomad
+    - { role: roles/nomad }
+  tags:
+    - nomad
+
