--- a/ansible/roles/contrib/docker/defaults/main.yml
+++ b/ansible/roles/contrib/docker/defaults/main.yml
@@ -11,7 +11,7 @@ docker_service_enabled: yes
 docker_restart_handler_state: restarted
 
 # Docker Compose options.
-docker_install_compose: True
+docker_install_compose: False
 docker_compose_version: "1.21.2"
 docker_compose_path: /usr/local/bin/docker-compose
 
