--- a/ansible/roles/nomad/tasks/main.yml
+++ b/ansible/roles/nomad/tasks/main.yml
@@ -33,7 +33,7 @@
     dest: /etc/nomad.d/jobs/
     src: files/fabio.nomad
   tags:
-    - fabio
+    - j
 
 - name: Create nomad server configuration
   template:
@@ -51,18 +51,18 @@
 
 - name: Start systemd nomad server
   systemd:
-    name: nomad-server
+    name: nomad
     state: started
     enabled: yes
   tags:
-    - g
+    - i
 
 - name: Export nomad environment
   lineinfile:
     path: /etc/environment
     line: 'NOMAD_ADDR=http://{{ ansible_eth1.ipv4.address }}:4646'
   tags:
-    - line
+    - i
 
 - name: Install fabio
   get_url:
@@ -70,4 +70,4 @@
     dest: /usr/local/bin/fabio
     mode: 0755
   tags:
-    - fabio
+    - i
